# xue_hua_video_snapshot

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  README_ZH.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/kurban/xue_hua_video_snapshot/: AndroidVideoDecoderHostApi.kt  PigeonCodecHelpers.kt  VideoDecoderApi.kt  XueHuaVideoSnapshotPlugin.kt
docs/adr/: 0001-cover-extraction-policy-in-dart.md
example/: pubspec.yaml
example/integration_test/: cover_extraction_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: xue_hua_video_snapshot.podspec
ios/xue_hua_video_snapshot/: Package.swift
ios/xue_hua_video_snapshot/Sources/xue_hua_video_snapshot/: AppleVideoDecoderHostApi.swift  CoverExtractor.swift  VideoDecoderApi.swift  XueHuaVideoSnapshotPlugin.swift
lib/: xue_hua_video_snapshot.dart
lib/pigeons/: video_decoder_api.dart
lib/shared/apple/: PigeonCodecHelpers.swift
lib/shared/cpp/: mpv_async_runtime.h  mpv_decoder_session_registry.cc  mpv_decoder_session_registry.h  mpv_session_decoder.cc  mpv_session_decoder.h  mpv_video_decoder_host_api.cc  mpv_video_decoder_host_api.h  video_decoder_api.cpp  video_decoder_api.h
lib/src/: asset_extractor.dart  brightness.dart  cover_extraction.dart  file_uri.dart  sampling_policy.dart  video_cover_frame.dart  video_decoder_port.dart  video_source.dart  xue_hua_video_snapshot.dart
lib/src/pigeon/: video_decoder_api.g.dart
linux/: CMakeLists.txt  mpv_cover_extractor.h  xue_hua_video_snapshot_plugin.cc
linux/include/xue_hua_video_snapshot/: xue_hua_video_snapshot_plugin.h
linux/test/: xue_hua_video_snapshot_plugin_test.cc
macos/: xue_hua_video_snapshot.podspec
macos/xue_hua_video_snapshot/: .gitignore  Package.swift
macos/xue_hua_video_snapshot/Sources/xue_hua_video_snapshot/: XueHuaVideoSnapshotPlugin.swift
pigeons/: video_decoder_api.dart
shared/apple/: AppleVideoDecoderHostApi.swift  VideoDecoderApi.swift
shared/cpp/: mpv_async_runtime.cc  mpv_video_decoder_host_api.cc  mpv_video_decoder_host_api.h
test/: asset_extractor_test.dart  cover_extraction_test.dart  video_source_test.dart
tool/: patch_pigeon_int64.sh  pigeon_codegen.sh  sync_apple_spm_sources.sh
windows/: CMakeLists.txt  mpv_cover_extractor.cc  xue_hua_video_snapshot_plugin.cpp  xue_hua_video_snapshot_plugin.h  xue_hua_video_snapshot_plugin_c_api.cpp
windows/include/xue_hua_video_snapshot/: xue_hua_video_snapshot_plugin_c_api.h
windows/test/: xue_hua_video_snapshot_plugin_test.cpp
